--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="number" id="input1" />
-    <input type="number" id="input2" />
-    <button>Add</button>
+    <!-- <input type="number" id="input1" />
+    <input type="number" id="input2" /> -->
+    <button>Buy</button>
     <script src="dist/app.js"></script>
   </body>
 </html>
