--- a/index.html
+++ b/index.html
@@ -8,17 +8,12 @@
     <title>Document</title>
   </head>
   <body>
-    <form class="container">
+    <form class="container" autocomplete="off">
       <label for="name">Task:</label>
       <input type="text" id="name" />
       <button>Add</button>
       <p>ToDo:</p>
-      <ul class="tasks">
-        <li>
-          <label for="task-1">Wyrzuciś śmieci</label>
-          <input type="checkbox" id="task-1" name="Wyrzucić śmieci" />
-        </li>
-      </ul>
+      <ul class="tasks"></ul>
     </form>
     <script src="dist/app.js"></script>
   </body>
